@@ -42,7 +42,10 @@
                 <version>0.0.8</version>
 
                 <configuration>
-                    <mainClass>ui.KnightApp</mainClass>
+                    <mainClass>ui.Launcher</mainClass>
+                    <options>
+                        <option>--enable-native-access=ALL-UNNAMED</option>
+                    </options>
                 </configuration>
             </plugin>
 
